--- a/app/src/main/res/layout/fragment_cliente.xml
+++ b/app/src/main/res/layout/fragment_cliente.xml
@@ -45,12 +45,12 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_nuevo"
             android:src="@drawable/ic_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:id="@+id/floatingActionButton"
-            tools:layout_editor_absoluteY="541dp"
-            tools:layout_editor_absoluteX="284dp" />
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_gravity="bottom|end"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
