--- a/app/src/main/res/layout/fragment_cliente.xml
+++ b/app/src/main/res/layout/fragment_cliente.xml
@@ -39,7 +39,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                 android:layout_marginTop="8dp" />
 
-
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/rv_lista"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="gone" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
