--- a/app/src/main/res/layout/fragment_operacion_cliente.xml
+++ b/app/src/main/res/layout/fragment_operacion_cliente.xml
@@ -7,11 +7,11 @@
         tools:context=".ui.fragment.OperacionClienteFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_grabar"
             android:src="@drawable/ic_save_as"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:id="@+id/floatingActionButton"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp" />
