--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,12 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
+        <item
+                android:id="@+id/nav_menu_secundario"
+                android:icon="@drawable/baseline_home_24"
+                android:title="@string/menu_inicial" />
+
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
