--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_menu_secundario">
 
     <fragment
         android:id="@+id/nav_home"
@@ -97,5 +97,18 @@
             android:name="com.example.personal.ui.fragment.OperacionClienteFragment"
             android:label="Registrar | editar cliente"
             tools:layout="@layout/fragment_operacion_cliente" />
+    <fragment
+            android:id="@+id/nav_menu_secundario"
+            android:name="com.example.personal.ui.fragment.MenuSecundarioFragment"
+            android:label="@string/menu_secundario"
+            tools:layout="@layout/fragment_menu_secundario" >
+        <action
+                android:id="@+id/action_nav_menu_secundario_to_nav_home"
+                app:destination="@id/nav_home" />
+        <action
+                android:id="@+id/action_nav_menu_secundario_to_nav_producto"
+                app:destination="@id/nav_producto" />
+
+    </fragment>
 
 </navigation>
